Html/CSS responsivness and design
Added Header/Input and button/ main section with rough frames for future content/footer; Some bootstrap classes and CSS to hold footer at the bottom of page

--- a/style.css
+++ b/style.css
@@ -1,10 +1,36 @@
 @font-face { font-family: Dimitri; src: url('DIMITRI.TTF'); }
-
+html{
+  position:relative;
+  height: 100%;
+}
 body {
   font-size: 18px;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
+/* -------------------------------------------------------------- header */
 h1 {
   font-family: Dimitri;
   color: #6441a4;
   font-size: 5em;
+}
+/* -------------------------------------------------------------- main */
+.spacer {
+  border:1px solid black;
+  height: 500px;
+}
+.spacer img {
+  width: 150px;
+  height: 200px;
+  border: 1px solid black;
+}
+/* -------------------------------------------------------------- footer */
+.main_div {
+  flex: 1;
+}
+footer {
+  padding-top: 15px;
+  height: 100px;
+  text-align: center;
 }
