--- a/style.css
+++ b/style.css
@@ -25,15 +25,30 @@ h1 {
 }
 .channel_frame {
   border:4px solid red;
-  height: 400px;
+  height: 350px;
   padding: 15px;
+}
+.padding_div {
+  height: 100%;
+}
+.padding_div>h2 {
+  background-color: green;
+  display: inline;
+  position: relative;
+  left: 10%;
+  bottom: -115px;
+}
+.padding_div>p {
+  background-color: yellow;
+  width: 33%;
 }
 .logo_img {
   width: 96px;
   height: 96px;
   border: 1px solid black;
   position: relative;
-  top: 30px;
+  top: 127px;
+  left: 10%;
 }
 /* -------------------------------------------------------------- footer */
 .main_div {
