--- a/style.css
+++ b/style.css
@@ -9,9 +9,6 @@ body {
   display: flex;
   flex-direction: column;
 }
-* {
-  border: 1px solid black;
-}
 /* -------------------------------------------------------------- header */
 h1 {
   font-family: Dimitri;
@@ -24,31 +21,43 @@ h1 {
   margin: auto;
 }
 .channel_frame {
-  border:4px solid red;
   height: 350px;
   padding: 15px;
 }
 .padding_div {
   height: 100%;
+  border: 1px solid black;
+  position: relative;
+}
+.channel_banner {
+  border: 1px solid purple;
+  position: absolute;
+  height: 170px;
+  width: 100%;
 }
 .padding_div>h2 {
-  background-color: green;
-  display: inline;
   position: relative;
   left: 10%;
-  bottom: -115px;
+  top: 30px;
+  width: 90%;
 }
-.padding_div>p {
-  background-color: yellow;
-  width: 33%;
+.padding_div>p:nth-child(2) {
+  text-align: right;
+  padding: 15px;
+}
+.padding_div>p:nth-child(5) {
+  position: relative;
+  left: 10%;
+  top: 30px;
+  width: 90%;
 }
 .logo_img {
   width: 96px;
   height: 96px;
   border: 1px solid black;
   position: relative;
-  top: 127px;
   left: 10%;
+  top: 30px;
 }
 /* -------------------------------------------------------------- footer */
 .main_div {
