search box margin
added 20px margin top and bottom of search input

--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ h1 {
   color: #6441a4;
   font-size: 5em;
 }
+/* -------------------------------------------------------------search section*/
+.search_section {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 /* -------------------------------------------------------------- main */
 .row {
   width: 100%;
