--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ h1 {
   height: 100%;
   border: 1px solid black;
   position: relative;
+  background-color: #9a7fcc;
+  z-index: -1;
 }
 .channel_banner {
   position: absolute;
